# Geo-Flow-VLA

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.eval  README.md  docker-compose.eval.yml  pyproject.toml  requirements.txt  sbatch_calvin.sh
CoppeliaSim_Edu_V4_10_0_rev0_Ubuntu22_04/: libcoppeliaSim.so.1
geo_flow_vla/: __init__.py
geo_flow_vla/configs/: calvin_config.yaml  config.yaml  rlbench_config.yaml
geo_flow_vla/data/: __init__.py  base_dataset.py  calvin_dataset.py  libero_dataset.py  moge_lifting.py  normalizer.py  rlbench_dataset.py  transforms.py
geo_flow_vla/data/download/: __init__.py  download_calvin.py  download_libero.py  download_rlbench.py
geo_flow_vla/eval/: __init__.py  base_evaluator.py  eval_calvin.py  eval_libero.py  eval_rlbench.py  policy_wrapper.py
geo_flow_vla/losses/: __init__.py  cpr_regularizer.py  fb_objective.py  flow_matching_loss.py
geo_flow_vla/models/: __init__.py  diffusion_policy.py  discriminator.py  dual_encoder.py  language_conditioned_world_model.py  language_encoder.py  world_model.py
geo_flow_vla/train/: __init__.py  phase1_world_model.py  phase2_policy.py
geo_flow_vla/utils/: __init__.py  camera_transforms.py  distributed.py  rotation_equivariance.py  schedule.py  visualizations.py
scripts/: check_action_stats.py  eval.sh  train.sh
